src/test/deca/context/invalid/resultats/test1_bool_print2-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test1_bool_print2.ass introuvable
